tests/compilefail06.out
[1mtests/compilefail06.pas:13:5: [0m[1m[91merror:[0m mac expected 2 parameters, but 1 provided
    13 | 	mac(4);